src/objects/loan__Dues_Details_Interface__c.object
<CustomObject>
    <fields>
        <fullName>loan__Balance_Amount__c</fullName>
        <formula>loan__Due_Amt__c -  loan__Payment_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__DD_Primary_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Dues Details Interfaces</relationshipLabel>
        <relationshipName>Dues_Details_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Due_Amt__c</fullName>
        <description>Due Amount</description>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Date__c</fullName>
        <description>Due date of the due.</description>
        <inlineHelpText>Due Date of the Due</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Type__c</fullName>
        <description>Due Type Id</description>
        <label>Due Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Incoming_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Incoming Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Incoming_Loan_Id__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Incoming Loan Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Dues Details Interfaces</relationshipLabel>
        <relationshipName>Dues_Details_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Payment Amount.</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Date__c</fullName>
        <description>Payment Date.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Dues Details Interface</label>
    <nameField>
        <displayFormat>DDI-{00000000}</displayFormat>
        <label>Dues Details Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dues Details Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>